8383884: [lworld] Rename JNI IsValueObject to HasIdentity
Reviewed-by: phubner, cjplummer